--- a/assets/styles/register.css
+++ b/assets/styles/register.css
@@ -5,10 +5,15 @@ html, body {
 }
 
 .left-side {
-  flex: 1.5;
-  background: url('imgs/Register.jpg') no-repeat center center;
+  background: url('imgs/register.jpg') no-repeat center center;
   background-size: cover;
   height: 100%;
+  
+}
+
+/*
+{
+  flex: 1.5;
   color: white;
   font-size: 2rem;
   font-weight: bold;
@@ -51,3 +56,4 @@ html, body {
     display: none;
   }
 }
+*/
